@@ -23,8 +23,8 @@ dependencies {
     compile 'commons-collections:commons-collections:3.2.2'
     compile 'org.apache.commons:commons-dbcp2:2.7.0'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.2.4.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.4.RELEASE'
+    compile 'org.springframework:spring-beans:5.2.5.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.5.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
